@@ -1,3 +1,8 @@
+2007-06-09 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.11)
+
+	* Test.php: Merged ANDYK's TODO implementation with mine, commit conflict
+	* t/todo.t: todo_start() now has the TODO reason, nested TODO is also supported
+
 2007-06-09 Ævar Arnfjörð Bjarmason <avar@cpan.org> (0.10)
 
 	* Test.php: Implemented TODO blocks via todo_start()/todo_end() (ANDYA's idea)
